--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: custom-git
+description: A high productivity, open source, general-purpose git tool.
+show_downloads: false
+google_analytics:
 theme: jekyll-theme-leap-day
