--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: custom-git
-description: A high productivity, open source, general-purpose git tool.
+description: An open source, general-purpose, command line git tool for high productivity.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-leap-day
