--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: custom-git
 description: An open source, general-purpose, command line git tool for high productivity.
+include: ["_pages"]
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-leap-day
