--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: An open source, general-purpose, command line git tool for high pro
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-leap-day
-plugins: - jekyll-redirect-from
+plugins: jekyll-redirect-from
