--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: custom-git
 description: An open source, general-purpose, highly efficient command line git tool.
 show_downloads: false
-google_analytics:
+google_analytics: G-ZTWKKERPZW
 theme: jekyll-theme-leap-day
