--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: An open source, general-purpose, highly efficient command line git 
 show_downloads: false
 google_analytics: G-ZTWKKERPZW
 theme: jekyll-theme-leap-day
+github:
+  repository_url: https://github.com/custom-git/custom-git-bash
