add "project maintained by"

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ google_analytics: G-ZTWKKERPZW
 theme: jekyll-theme-leap-day
 github:
   repository_url: https://github.com/custom-git/custom-git-bash
+  is_project_page: true
+  owner_url: https://github.com/bhavidhingra
+  owner_name: bhavidhingra
