add portfolio website

--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ theme: jekyll-theme-leap-day
 github:
   repository_url: https://github.com/custom-git/custom-git-bash
   is_project_page: true
-  owner_url: https://github.com/bhavidhingra
+  owner_url: www.bhavidhingra.dev
   owner_name: bhavidhingra
