--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,29 @@
 title: custom-git
-description: An open source, general-purpose, highly efficient command line git tool.
-show_downloads: false
-google_analytics: UA-184167407-3
-theme: jekyll-theme-leap-day
-github:
-  repository_url: https://github.com/custom-git/custom-git-bash
-  is_project_page: true
-  owner_url: https://bhavidhingra.dev
-  owner_name: bhavidhingra
+# theme: just-the-docs
+remote_theme: pmarsceill/just-the-docs
+url: "https://custom-git.io"
+baseurl: "/"
+logo: "/assets/images/custom-git-logo.png"
+
+# Aux links for the upper right navigation
+aux_links:
+  "View on GitHub":
+    - "//github.com/custom-git/custom-git-bash"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Back to top link
+back_to_top: false
+back_to_top_text: "Back to top"
+
+footer_content: 'Copyright &copy; 2020-2021 <a href="https://bhavidhingra.dev" target="_blank">Bhavi Dhingra</a>. Distributed by an <a href="https://github.com/custom-git/custom-git-bash/blob/main/LICENSE" target="_blank">Apache License 2.0.</a>'
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/custom-git/custom-git.github.io" # the github URL for your repo
+gh_edit_branch: "gh-pages" # the branch that your docs is served from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
+
+ga_tracking: UA-184167407-3
